--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "react-youtube-duplicate",
+  "name": "react-youtube-search",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "dotenv": "^4.0.0",
     "react": "15.5.4",
-    "react-dom": "15.5.4"
+    "react-dom": "15.5.4",
+    "youtube-api-search": "^0.0.5"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
