fixin package json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-youtube-search",
+  "name": "react-mini-youtube",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
